--- a/Other/index.html
+++ b/Other/index.html
@@ -216,6 +216,28 @@
             }
         }
 
+        @keyframes appear {
+            0% {
+                opacity: 0;
+            }
+
+            25% {
+                opacity: 0.25;
+            }
+
+            50% {
+                opacity: 0.5;
+            }
+
+            75% {
+                opacity: 0.75;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
         input {
             accent-color: black;
         }
@@ -283,6 +305,12 @@
 
             <button id="repair"></button>
         </div>
+
+
+
+
+
+
 
 
 
