--- a/Game/Game.html
+++ b/Game/Game.html
@@ -68,6 +68,8 @@
                         window.location.href = "../Recruiter/index.html#toGameImage";
                     } else if (sessionStorage.getItem('pageNo') == 2) {
                         window.location.href = "../Student/index.html#game";
+                    } else if (sessionStorage.getItem('pageNo') == 3) {
+                        window.location.href = "../Other/index.html#game";
                     }
                 }, 300);
                 $('body').addClass('transitionOut');
