--- a/Other/index.html
+++ b/Other/index.html
@@ -566,7 +566,7 @@
 
             document.querySelector('#factsPara').innerHTML = document.querySelector('#insectPara').innerHTML;
             if (isMobileDevice) {
-                document.querySelector('#factsPara').style.backgroundColor = "rgb(255, 254, 246)";
+                document.querySelector('#factsPara').style.backgroundColor = "white";
             } else {
                 document.querySelector('#factsPara').style.backgroundImage = "url('insectBack.png')";
             }
@@ -665,7 +665,7 @@
             document.querySelector(`#${radioBtn}`).addEventListener('click', function () {
 
                 if (isMobileDevice) {
-                    document.querySelector('#factsPara').style.backgroundColor = "rgb(255, 254, 246)";
+                    document.querySelector('#factsPara').style.backgroundColor = "white";
                 }
 
                 if (radioBtn == 'insectFactsRadio' && !isMobileDevice) {
@@ -708,7 +708,7 @@
                 }
 
                 if (isMobileDevice) {
-                    document.querySelector('#factsPara').style.backgroundColor = "rgb(255, 254, 246)";
+                    document.querySelector('#factsPara').style.backgroundColor = "white";
                 }
 
                 if (setChecked == 'insectFactsRadio' && !isMobileDevice) {
